Rework library list API to remove pagination
